# firefox

./: Cargo.toml  mots.yaml  moz.build
.cargo/: config.toml.in
.github/: dependabot.yml
config/: system-headers.mozbuild
docs/contributing/: directory_structure.rst
docs/nspr/: nspr_contributor_guide.rst
dom/base/: nsGlobalWindowOuter.cpp
extensions/auth/: nsAuthSambaNTLM.h
gfx/wr/webrender/: Cargo.toml
gfx/wr/webrender/src/: profiler.rs  render_api.rs  render_backend.rs  scene_builder_thread.rs
gfx/wr/webrender/src/renderer/: mod.rs  shade.rs
gfx/wr/webrender_api/: Cargo.toml
js/: moz.configure
js/src/: make-source-package.py
mozglue/android/: moz.build
nspr/: .clippy.toml  Cargo.toml  cbindgen.toml
nspr/include/: nspr.h  prcpucfg.h  prmem.h
nspr/src/: lib.rs  plarena.rs  plbase64.rs  plstr.rs  pprio.rs  prclist.rs  prcvar.rs  prdtoa.rs  prenv.rs  prerr.rs  prerror.rs  prfile.rs  prinit.rs  prinrval.rs  prio.rs  prlink.rs  prlock.rs  prlog.rs  prmem.rs  prmon.rs  prnetdb.rs  prprf.rs  prrwlock.rs  prshma.rs  prsystem.rs  prthread.rs  prtime.rs  prtpool.rs  prtypes.rs
python/mozbuild/mozbuild/backend/: cpp_eclipse.py
security/: moz.build
security/nss/lib/ssl/: sslimpl.h
security/nss/lib/util/: exports.gyp  manifest.mn  plgetopt.c  plhash.c  util.gyp
supply-chain/: audits.toml  config.toml
taskcluster/kinds/spidermonkey/: kind.yml
testing/talos/talos/tests/devtools/addon/content/pages/custom/debugger/app/: package.json
toolkit/components/glean/api/: Cargo.toml
toolkit/components/telemetry/core/: Telemetry.cpp
toolkit/xre/: nsAppRunner.cpp  nsUpdateDriver.cpp  nsUpdateDriver.h
tools/browsertime/: package-lock.json
tools/rewriting/: ThirdPartyPaths.txt
tools/update-programs/: moz.configure
widget/gtk/: DBusService.cpp
xpcom/components/: nsComponentManager.cpp
xpcom/io/: nsLocalFileWin.cpp
xpcom/threads/: nsProcess.h
